--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="ux"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAtXKqH9QrXSbJtBdArKoyJdhhtikwDQ1k"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
